    - Only recalculate gateway if ipaddress or netmask is changed.
    - Never recalculate nameserver.
  * Joshua Kwan
    - Make the question about adhoc/managed actually do something,
      add a template for its question. Note: needs translation.
    - Make interfaces honor the decision made in the adhoc/managed question.
    - Make sure the WEP question, priority high, always gets asked.
    - If netcfg/get_hostname returns a FQDN, seed netcfg/get_domain with it
      and do not ask that question a second time. Only ask it if FQDN was
      _not_ passed. (Closes: #174360)
    - Write out some informative text to INTERFACES_FILE.
  * Translators: do not modify this changelog to record changes you make to
    po files. A record of your contributions will be added to the changelog
    at package release time by the output-l10n-changes program.

 -- Joshua Kwan <joshk@triplehelix.org>  Fri, 19 Mar 2004 13:00:49 -0800

netcfg (0.56) unstable; urgency=low

  * Petter Reinholdtsen
    - Undo code changes done by Bastian Blank.  They need more testing
      so we only include the translations for beta3.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 14 Mar 2004 19:50:33 +0100

netcfg (0.55) unstable; urgency=low

  * Bastian Blank
    - Use inet_pton and inet_ntop. Why must people always write its own
      instead of using well tested default functions?
    - Only recalculate gateway if ipaddress or netmask is changed.
    - Never recalculate nameserver.
  * Translations:
    - Kęstutis Biliūnas: Updated Lithuanian translation (lt.po)
    - Jordi Mallach: Updated Catalan translation (ca.po)
    - Giuseppe Sacco: Updated italian translation (it.po)
    - Nikolai Prokoschenko: Russian updates (ru.po)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 14 Mar 2004 19:22:30 +0100

netcfg (0.54) unstable; urgency=low

  * Strip the binaries again. 

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 15:38:56 -0500

netcfg (0.53) unstable; urgency=low
